@@ -8,6 +8,8 @@ let tests =
     Test_file.test_1;
     Test_file.test_2;
     Test_file.test_3;
+    Test_file.test_4;
+    Test_file.test_5;
     Test_string.test_1;
     Test_string.test_2;
     Test_string.test_3;
